gap fixes

--- a/src/sections/Contact/Contact.module.scss
+++ b/src/sections/Contact/Contact.module.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   margin-top: 100px;
-  margin-bottom: 200px;
   width: 100%;
 
   .frame {
