--- a/src/sections/Gallery/Gallery.module.scss
+++ b/src/sections/Gallery/Gallery.module.scss
@@ -2,8 +2,8 @@
 .gallery {
   direction: ltr !important;
   position: relative;
-  padding-bottom: 120px;
-  padding-top: 40px;
+  padding: 30px 0;
+
   .radish {
     position: absolute;
     left: 5%;
@@ -26,7 +26,7 @@
     img {
       height: 100%;
       width: 100%;
-      object-fit: contain;
+      object-fit: cover;
     }
     .buttonPrev {
       width: 70px;
